--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "discord-leaderboard-bot",
+  "name": "scenexe2-user-interface",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
